--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <h1>We are software developers</h1>
+   <main id="main">
+
+    <h1 id="title">Dr. Norman Borlaug</h1>
+    <div id="img-div">
+        <img id="image" src="" alt="">
+    </div>
+   </main>
 </body>
 </html>
