the changs are made

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, 
             </li></div>
         </p>
+        <a id="tribute-link" href="page1.html" target="_blank">Read more</a>
    </main>
 </body>
 </html>
