new changes are made

--- a/index.html
+++ b/index.html
@@ -11,9 +11,20 @@
    <main id="main">
 
     <h1 id="title">Dr. Norman Borlaug</h1>
+    <p>The man who saved millions of lives</p>
+    <div id="dr">
     <div id="img-div">
-        <img id="image" src="" alt="">
-    </div>
+        <img id="image" src="" alt="Dr. Norman" height="200px" width="100px">
+        </div>
+      <p>Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
+      </div>
+      <p id="tribute-info">Here's a time line of Dr. Borlaug's life:</p>
+        <p id="ab">    
+          <li><b>1914</b> - Born in Cresco, Iowa</li>
+          <div id="ak">
+          <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, 
+            </li></div>
+        </p>
    </main>
 </body>
 </html>
